fix vertically fit images stretching

--- a/_images.scss
+++ b/_images.scss
@@ -1,3 +1,9 @@
+// requires these base styles
+// img {
+//     max-width: 100%;
+//     height: auto;
+// }
+
 .image {
     height: 0;
     position: relative;
@@ -27,8 +33,9 @@
     // fit image vertically
     .image#{$size}-fit-y {
         img {
-            height: 100%;
+            max-height: 100%;
             width: auto;
+            max-width: none;
         }
     }
 
@@ -36,7 +43,7 @@
     .image#{$size}-fit-x {
         img {
             height: auto;
-            width: 100%;
+            max-width: 100%;
         }
     }
 
